# turtledrone

./: .gitignore  readme.md
turtledrone_simulation/: CMakeLists.txt  package.xml
turtledrone_simulation/launch/: turtledrone_sim.launch
turtledrone_simulation/models/turtledrone/: model.config  model.sdf  turtledrone.dae
