<?xml version="1.0"?>
<package format="2">
  <name>turtledrone_simulation</name>
  <version>0.0.0</version>
  <description>The turtledrone_simulation package</description>

  <maintainer email="yi.jiahe@gmail.com">Yi Jiahe</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>gazebo_ros</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>

  <export>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
    <gazebo_ros gazebo_model_media="${prefix}/models"/>
  </export>
</package>
